finalized menu functionality, small fixes to game alignments and fonts

--- a/CSS/all-pages/main.css
+++ b/CSS/all-pages/main.css
@@ -1,5 +1,5 @@
 * {
-  outline: solid 1px green;
+/*   outline: solid 1px green; */
 }
 
 html {
