--- a/CSS/all-pages/site-menu.css
+++ b/CSS/all-pages/site-menu.css
@@ -14,6 +14,22 @@
 
 #menu-button-box {
   display: none;
+  width: 30px;
+  justify-content: center;
+  align-items: center;
+}
+
+#menu-container i {
+  color: white;
+  font-size: 20px;
+}
+
+#bars-icon {
+  display: none;
+}
+
+#cross-icon {
+  display: none;
 }
 
 .logo {
